--- a/config/application.yml
+++ b/config/application.yml
@@ -16,4 +16,5 @@ GMAIL_PASSWORD: 863Rovu$
 PUBLISHABLE_KEY: pk_test_P6kAxxQA0L6IazBz3Wpv0vrs
 SECRET_KEY: sk_test_IK5wFOzHNxSj0QM6LSjx60jv
 
+MAILGUN_USERNAME: postmaster@sandbox297954caf0144383a8e35855a9618348.mailgun.org
 MAILGUN_PASSWORD: cee6b668beae75e9cc40519598204ce4
